<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CaptureActivity!</string>
    <string name="app_name">WishlistNote</string>
    <string name="edit_title">Edit title...</string>
    <string name="change_photo">Change photo</string>
    <string name="save_photo">Save</string>
    <string name="edit">Edit</string>
    <string name="create_dm">Creating a new note</string>
    <string name="update_dm">Updating the note</string>
    <string name="addDescription">Add description</string>
    <string name="loading">Loading...</string>
    <string name="confirm_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="progress">Please wait...</string>
    <string name="generate_share_url">Generate share url</string>
    <string name="add_note">Add note</string>
    <string name="create_notebook">Create a new notebook</string>
    <string name="done">Done</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_photo">Choose photo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_to_notebook_success">Successfully import share note to notebook</string>
    <string name="add_to_notebook_fail">Fail to import note to notebook</string>
    <string name="create_success">Create note success</string>
    <string name="edit_success">Edit note success</string>
    <string name="start_delete_note">Delete note...</string>
    <string name="delete_success">Detele note success</string>
    <string name="delete_fail">Detele note fail</string>
    <string name="no_data">No data</string>
    <string name="refresh">Refresh</string>
    <string name="update_to_server">Update to server</string>
    <string name="check_item">This item is completed</string>
    <string name="save_to_notebook">Save to notebook</string>
    <string name="update_fail">Update fail</string>

</resources>