<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/create_note"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/add_note"
        android:visible="true"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/delete"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/action_confirm_delete"
                android:icon="@android:drawable/ic_menu_delete"
                android:title="@string/confirm_delete"/>
            <item
                android:id="@+id/action_cancel_delete"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/cancel"/>
        </menu>
    </item>

</menu>